# src/routes/signup.router.ts
@@ -1,15 +1,15 @@
 import { Router } from "express";
 import {
-  checkEmailDuplicateInSignup,
-  checkUserIdDuplicateInSignup,
+  checkEmailDuplicationInSignup,
+  checkUserIdDuplicationInSignup,
   registerUser,
 } from "@controllers";
 
 export default (router: Router) => {
   // 이메일 중복 검사
-  router.post("/signup/checkEmailDuplicate", checkEmailDuplicateInSignup);
+  router.post("/signup/checkEmailDuplication", checkEmailDuplicationInSignup);
   // 사용자 아이디 중복 검사
-  router.post("/signup/checkUserIdDuplicate", checkUserIdDuplicateInSignup);
+  router.post("/signup/checkUserIdDuplication", checkUserIdDuplicationInSignup);
   // 유저 정보 등록
   router.post("/signup/registerUser", registerUser);
 };
